--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Interruptor da Alegria 💥✨</title>
+  <title>Pagina</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
@@ -275,7 +275,7 @@
 
   <div class="main-content text-center">
     <div class="power-btn" id="powerBtn">🔌</div>
-    <div class="typewriter">🌞 Bom dia! Que tal um elogio para alegrar o seu dia?</div>
+    <div class="typewriter"> 😀 Que tal um elogio ?</div>
 
     <div class="buttons-grid">
       <div class="btn-elogio">Clique-me 💫</div>
